# scMODAL

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
scmodal/: model.py
