[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scmodal"
version = "1.0.0"
description = "A general deep learning framework for single-cell Multi-Omics Data Alignment with feature Links"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "torch>=1.6.0",
    "scanpy>=1.7.2",
    "anndata>=0.7.6",
    "pandas>=1.1.5",
    "numpy==1.26.4",
    "umap-learn>=0.4.6",
    "numba>=0.49.1",
    "matplotlib<3.7",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.1",
    "annoy>=1.17.1",
    "igraph==0.11.4",
    "leidenalg==0.10.2"
]
