[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scmodal"
version = "1.0.0"
description = "A general deep learning framework for single-cell Multi-Omics Data Alignment with feature Links"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "scanpy>=1.7.2",
    "anndata>=0.7.6",
    "pandas>=1.1.5",
    "numpy==1.26.4",
    "umap-learn>=0.4.6",
    "numba>=0.49.1",
    "matplotlib<3.7",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.1",
    "annoy>=1.17.1",
    "igraph==0.11.4",
    "leidenalg==0.10.2"
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
