[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scmodal"
version = "1.0.0"
description = "A general deep learning framework for single-cell Multi-Omics Data Alignment with feature Links"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    # PyTorch (CUDA 12.4 wheels via uv index below)
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    # Core single-cell stack 
    "scanpy>=1.7.2",
    "anndata>=0.7.6",
    "pandas>=1.1.5",
    "numpy==1.26.4",
    "scipy>=1.10.1",
    "scikit-learn>=1.3.0",
    "scikit-misc>=0.5.1",
    "umap-learn>=0.4.6",
    "numba>=0.49.1",
    "matplotlib<3.7",
    # Scanpy graph / clustering backends
    "annoy>=1.17.1",
    "igraph==0.11.4",
    "leidenalg==0.10.2",
    "pynndescent>=0.5",
    # Scanpy / anndata core transitive deps
    "h5py>=3.1",
    "networkx>=2.7",
    "tqdm>=4.64",
    "joblib>=1.2",
    "natsort>=8.0",
    "packaging>=21.3",
    "legacy-api-wrap>=1.4",
    "patsy>=0.5",
    "statsmodels>=0.13",
    "seaborn>=0.13",
    "session-info>=1.0",
    # Jupyter notebook runtimes
    "ipykernel>=6.25",
    "ipywidgets>=8.1",
    "jupyterlab>=4.2",
    # ONNX export / validation 
    "onnx>=1.16",
    "onnxruntime>=1.17",
    "onnxscript>=0.1.0",
    # HPC / plotting nice-to-haves
    "psutil>=5.9",
    "pillow>=10.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
